fix: Align profile text to the left when > 1024

--- a/blocks/profile/__info-text/profile__info-text.css
+++ b/blocks/profile/__info-text/profile__info-text.css
@@ -2,3 +2,9 @@
   position: relative;
   text-align: center;
 }
+
+@media screen and (min-width: 1024px) {
+  .profile__info-text {
+    text-align: left;
+  }
+}
